# verse-vault

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE.md  README.md  ROADMAP.md  commitlint.config.js  dprint.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  typos.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-api.yml  deploy-vv-router.yml  deploy-web.yml  release-desktop.yml  release-tauri.yml
apps/web/: CHANGELOG.md  env.d.ts  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
backend/: README.md  manage.py  requirements.txt
backend/versevault/: asgi.py  middleware.py  settings.py  urls.py  validator.py  views.py  wsgi.py
crates/core/: CHANGELOG.md  Cargo.toml  card_types.toml
crates/sim/: Cargo.toml
crates/wasm/: CHANGELOG.md  Cargo.toml  README.md  test-smoke.js
crates/wasm/src/: lib.rs
crates/wasm/tests/: roundtrip.rs
data/: 1-gepc-niv.json  1-gepc.json  2-nt-survey-niv.json  2-nt-survey.json  3-corinthians-niv.json  3-corinthians.json  4-john-niv.json  4-john.json  5-hp-niv.json  5-hp-tiers.json  5-hp.json  6-ot-survey-niv.json  6-ot-survey-tiers.json  6-ot-survey.json  7-rj-niv.json  7-rj-tiers.json  7-rj.json  8-luke-niv.json  8-luke.json  corinthians.json  gepc.json
data/schedules/: 1-gepc-2023-24.json  2-nt-survey-2024-25.json  (+1 more)
deploy/: deploy.sh  litestream-health.sh  litestream.yml  provision.sh  restore-drill.sh  verse-vault.service
docs/: architecture.md  audit-keyword-markup-1-gepc-2026-05-12.md  audit-keyword-markup-2-nt-survey-2026-05-12.md  audit-keyword-markup-2026-05-11.md  audit-keyword-markup-4-john-2026-05-12.md  audit-keyword-markup-5-hp-2026-05-12.md  audit-keyword-markup-6-ot-survey-2026-05-12.md  audit-keyword-markup-7-rj-2026-05-12.md  audit-keyword-markup-8-luke-2026-05-12.md  decks.md  deployment.md  graph.md  memory-model.md  path-posterior-memory-model.md  persistence.md  review.md  scheduling.md  server-api.md  session.md  test-scenarios.md  validation.md  wasm-api.md  web-nav.md
frontend/: README.md
laravel-backends-for-vuejs-3/: package-lock.json
tools/: README.md  anki_to_export.py  apply_audit.py  apply_keyword_annotations.py  audit_colpkg.py  build-wasm-web.sh  check-contract-versions.sh  check_against_apibible.py  chunk_punctuation.py  chunk_verses.py  derive_structure.py  evaluate_phrases.py  expand_deck.py  extract_pdf_schedule.py  extract_phrases.py  find_ftvs.py  find_keywords.py  import_colpkg.py  init_deck.py  init_side_deck.py  merge_chunks.py  parse_anki.py  prepare_batches.py  split_phrases.py  test_anki_to_export.py  test_derive_structure.py  test_phrase_splitter.py  validate_and_merge.py
verse-vault/: .env.example
(+139 files in other folders)
